syntax = "proto3";

package wallet.backend;
option  go_package = "./backend;backend";

//================================= TYPES ===================================

enum TransactionType {
  TRANSACTION_TYPE_INVALID  = 0;
  TRANSACTION_TYPE_TOP_UP   = 1;
  TRANSACTION_TYPE_PAY      = 2;
  TRANSACTION_TYPE_WITHDRAW = 3;
}

enum TransactionStatus {
  TRANSACTION_STATUS_INVALID    = 0;
  TRANSACTION_STATUS_PENDING    = 1;
  TRANSACTION_STATUS_PROCESSING = 2;
  TRANSACTION_STATUS_SUCCESSFUL = 3;
  TRANSACTION_STATUS_FAILED     = 4;
  TRANSACTION_STATUS_CANCELED   = 5;
}

message Empty {}

message DefaultRes { bool result = 1; }
